# quest-mvp

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  drizzle.config.ts  package.json  wrangler.toml
apps/api/src/: index.ts  types.ts
apps/api/src/cron/: crank.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/lib/: errors.ts  idl.ts  openai.ts  privy.ts  solana.ts
apps/api/src/middleware/: auth.ts  cors.ts  rate-limit.ts
apps/api/src/routes/: auth.ts  claims.ts  feed.ts  media.ts  quests.ts  users.ts  webhooks.ts
apps/api/src/services/: claim.service.ts  moderation.service.ts  oracle.service.ts  quest.service.ts  storage.service.ts  user.service.ts  verification.service.ts
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: header.tsx  hero.tsx  quest-card.tsx  quest-feed.tsx
contracts/: Anchor.toml
contracts/programs/quest/: Cargo.toml
contracts/programs/quest/src/: lib.rs
contracts/tests/: quest.ts
docs/: PRD.md
product/: PRD.md  QUEST_Onboarding_UX_Consultant_Report.docx  QUEST_Onboarding_User_Feedback.docx  product-overview.md
